--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 url: http://samueltbrown.github.com
 title: My Octopress Blog
 subtitle: A blogging framework for hackers.
-author: Your Name
+author: Sam Brown
 simple_search: http://google.com/search
 description:
 
